--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
     -->
 
 
-  <<script>
+  <script>
     if ('serviceWorker' in navigator) {
     navigator.serviceWorker.register('../sw.js')
     .then(registration => {
